Revise README for Burp Suite installation steps
Updated instructions for Java installation and Burp Suite activation process.